src/test/ui/nll/borrowed-match-issue-45045.stderr
error[E0503]: cannot use `e` because it was mutably borrowed
  --> $DIR/borrowed-match-issue-45045.rs:25:9
   |
22 |     let f = &mut e;
   |             ------ borrow of `e` occurs here
...
25 |         Xyz::A => println!("a"),
   |         ^^^^^^ use of borrowed `e`

error: aborting due to previous error

